# stats-tension-emploi-france

./: README.md  app.py  export.csv  part-00000-e7200f09-5574-407b-a4c1-bc47fb3404fa-c000.csv  pyproject.toml
.github/workflows/: update_data.yml
export.csv/: .part-00000-e7200f09-5574-407b-a4c1-bc47fb3404fa-c000.csv.crc
