[tool.poetry]
name = "stats-tension-emploi-france"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "stats_tension_emploi_france"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.4.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
